fix css alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,21 +22,12 @@ header {
   }
  
 
-
-
-
-
-
-
 header h1 {
     color: midnightblue;
     font-size: 40px;
     font-weight: bold;
     
 }
-
-
-
 
 
 nav {
@@ -105,50 +96,83 @@ li {
 }
 
 li a {
-    display: block;
+    
     color: midnightblue;
     text-align: center;
     padding: 16px;
     text-decoration: none;
 }
 
-.mitch{
-  position:static;
- 
+
+
+footer{
+display: flex;
+font-family: Helvetica, Arial, sans-serif;
+justify-content: center;
+padding: 40px 35px;
+width: 100%;
+align-items: center;
+background-color: midnightblue;
 }
 
 
-
-
-
-  .footer{
-  
- 
-  color: midnightblue;
-}
-
-
-
-.h3{
-    font-family: arial;
-    text-transform: uppercase;
-    font-size: 30px;
-    position:relative;
-    margin: 730px auto 0px auto;
-    opacity: 1;
-    position: absolute;
-}
 
 
 .container {
-color: #FFFFFF;
-display: block;
-font-size: 17px;
-line-height: 24px;
-flex-direction: column;
-align-items: center;
-padding-left: 500px;
+    background-color: pink;
+    display: flex;
+   flex-flow: row wrap;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+
+
 }
+
+.panel {
+    height: 300px;
+    width: 500px;
+    border-radius: 50px;
+    color: #ffff;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+    }
+
+    .panel img {
+        height: 300px;
+        width: 500px;
+        object-fit: cover;
+    }
+
+.panel h3 {
+    font-size: 12px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity:1 ;
+
+}
+
+.panel.active {
+    flex: 5;
+}
+
+.panel.active h3{
+    opacity:1;
+    transition:opacity 0.3s ease-in 0.4s;
+}
+
+@media(max-width: 480px) {
+    .container{
+        width:100vw;}
+
+}
+
+
 /* From cssbuttons.io by @westitan */
 button {
  position: relative;
@@ -163,7 +187,7 @@ button {
 
 button span {
  position: relative;
- color: midnightblue
+ color: midnightblue;
  font-family: Arial;
  letter-spacing: 8px;
  z-index: 1;
